--- a/css/style.css
+++ b/css/style.css
@@ -1582,13 +1582,23 @@ body a {
 }
 .products__filter__content {
   display: flex;
-  height: 100%;
+  height: calc(100% + 0.2rem);
 }
 @media (max-width: 992px) {
   .products__filter__content {
     overflow: scroll hidden;
     padding-right: 8.5rem;
   }
+}
+.products__filter__content::-webkit-scrollbar {
+  height: 0.2rem;
+}
+.products__filter__content::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.products__filter__content::-webkit-scrollbar-thumb {
+  background-color: #A8B2BE;
+  border-radius: 10rem;
 }
 .products__filter__item {
   font-weight: 500;
